- Add LambdaMetaFactory invokers - Add additional pool module parameters - Fix origin filter not working properly - Fix custom screen transition goof-ups